// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<LabelWithPercent /> matches snapshot with isActive=true 1`] = `
<DocumentFragment>
  <div
    class="d-inline-block mw-100"
  >
    <span
      class="components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start"
    >
      <span
        class="me-1 px-1 bg-primary text-white components-labelWithPercent-percent"
      >
        25
      </span>
      <span>
        <span
          class="components-label-value"
        >
          bar
        </span>
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-xmark cursor-pointer text-reset ms-1"
        data-icon="xmark"
        data-prefix="fas"
        role="img"
        style="font-size: 100%;"
        viewBox="0 0 384 512"
      >
        <path
          d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="progress components-labelWithPercent-progress me-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<LabelWithPercent /> matches snapshot with offset=0 1`] = `
<DocumentFragment>
  <div
    class="d-inline-block mw-100"
  >
    <span
      class="components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start"
    >
      <span
        class="me-1 px-1 bg-primary text-white components-labelWithPercent-percent"
      >
        25
      </span>
      <span>
        <span
          class="components-label-value"
        >
          bar
        </span>
      </span>
    </span>
    <div
      class="progress components-labelWithPercent-progress me-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<LabelWithPercent /> matches snapshot with offset=25 1`] = `
<DocumentFragment>
  <div
    class="d-inline-block mw-100"
  >
    <span
      class="components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start"
    >
      <span
        class="me-1 px-1 bg-primary text-white components-labelWithPercent-percent"
      >
        25
      </span>
      <span>
        <span
          class="components-label-value"
        >
          bar
        </span>
      </span>
    </span>
    <div
      class="progress components-labelWithPercent-progress me-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="progress-bar bg-transparent"
        role="progressbar"
        style="width: 25%;"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
